--- a/app.json
+++ b/app.json
@@ -7,7 +7,6 @@
     "icon": "./assets/images/icon.png",
     "scheme": "wtlfo",
     "userInterfaceStyle": "dark",
-    "newArchEnabled": true,
     "backgroundColor": "#000000",
     "ios": {
       "supportsTablet": true,
@@ -24,7 +23,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.brents.wtlfo"
     },
     "web": {
       "output": "static",
@@ -41,7 +41,10 @@
           "backgroundColor": "#000000"
         }
       ],
-      "expo-sqlite"
+      "expo-sqlite",
+      "expo-font",
+      "expo-image",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
@@ -58,7 +61,8 @@
       "policy": "appVersion"
     },
     "updates": {
-      "url": "https://u.expo.dev/fd7017b3-0e29-4b90-8a09-cfdb437daca5"
+      "url": "https://u.expo.dev/fd7017b3-0e29-4b90-8a09-cfdb437daca5",
+      "enableBsdiffPatchSupport": true
     }
   }
 }
