--- a/package.json
+++ b/package.json
@@ -19,42 +19,42 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@shopify/react-native-skia": "2.2.12",
+    "@shopify/react-native-skia": "2.4.14",
     "elektron-lfo": "1.0.10",
-    "expo": "~54.0.31",
-    "expo-constants": "~18.0.13",
-    "expo-dev-client": "~6.0.20",
-    "expo-font": "~14.0.10",
-    "expo-haptics": "~15.0.8",
-    "expo-image": "~3.0.11",
-    "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.21",
-    "expo-splash-screen": "~31.0.13",
-    "expo-sqlite": "~16.0.10",
-    "expo-status-bar": "~3.0.9",
-    "expo-symbols": "~1.0.8",
-    "expo-system-ui": "~6.0.9",
-    "expo-updates": "~29.0.16",
-    "expo-web-browser": "~15.0.10",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
+    "expo": "~55.0.0-preview.3",
+    "expo-constants": "~55.0.0",
+    "expo-dev-client": "~55.0.0",
+    "expo-font": "~55.0.1",
+    "expo-haptics": "~55.0.1",
+    "expo-image": "~55.0.1",
+    "expo-linking": "~55.0.1",
+    "expo-router": "~55.0.0-beta.1",
+    "expo-splash-screen": "~55.0.1",
+    "expo-sqlite": "~55.0.1",
+    "expo-status-bar": "~55.0.1",
+    "expo-symbols": "~55.0.1",
+    "expo-system-ui": "~55.0.1",
+    "expo-updates": "~55.0.2",
+    "expo-web-browser": "~55.0.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-native": "0.83.1",
+    "react-native-gesture-handler": "~2.30.0",
+    "react-native-reanimated": "~4.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "4.19.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.7.1"
   },
   "devDependencies": {
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "29.5.14",
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.2.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0",
+    "eslint-config-expo": "~55.0.0",
     "expo-mcp": "~0.2.1",
     "jest": "~29.7.0",
-    "jest-expo": "~54.0.16",
+    "jest-expo": "~55.0.2",
     "test-renderer": "0.14.0",
     "typescript": "~5.9.2"
   },
