--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@shopify/react-native-skia": "2.4.14",
     "elektron-lfo": "1.0.10",
     "expo": "~55.0.0-preview.3",
+    "expo-build-properties": "~55.0.2",
     "expo-constants": "~55.0.1",
     "expo-dev-client": "~55.0.1",
     "expo-font": "~55.0.1",
